--- a/templates/index.html
+++ b/templates/index.html
@@ -1,9 +1,28 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Hello World</title>
-  </head>
-  <body>
-    <h1>Hello World!</h1>
-  </body>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="../static/bootstrap/css/bootstrap.css">
+  <link rel="stylesheet" href="../static/styles.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+  <title>Daniel Giansante</title>
+</head>
+<body>
+  <aside id="header">
+    <section class="profile">
+      <img src="../static/img/profile.png" alt="profile">
+      <h1>Daniel Giansante</h1>
+      <p>Full Stack Developer</p>
+      <div class="social-links mt-4 text-center">
+        <a target="_blank" href="https://www.linkedin.com/in/daniel-gvieira">
+          <i class="bi bi-linkedin"></i></a>
+        <a target="_blank" href="https://github.com/DanielGiansante">
+          <i class="bi bi-github"></i></a>
+        <a target="_blank" href="https://www.instagram.com/danielgiansantev/">
+          <i class="bi bi-instagram"></i></a>
+      </div>
+    </section>
+  </aside>
+</body>
 </html>
