--- a/templates/index.html
+++ b/templates/index.html
@@ -23,6 +23,29 @@
           <i class="bi bi-instagram"></i></a>
       </div>
     </section>
+    <nav id="navbar" class="nav-menu">
+      <ul class="nav flex-column">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#"><i class="bi bi-house"></i>Inicio</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#"><i class="bi bi-person"></i>Sobre</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#"><i class="bi bi-list-check"></i>Habilidades</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" 
+          href="#"><i class="bi bi-file-earmark"></i>Currículo</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link"href="#"><i class="bi bi-collection"></i>Portifolio</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#"><i class="bi bi-envelope"></i>Contato</a>
+        </li>
+      </ul>
+    </nav>
   </aside>
 </body>
 </html>
