--- a/templates/index.html
+++ b/templates/index.html
@@ -9,6 +9,7 @@
   <title>Daniel Giansante</title>
 </head>
 <body>
+  <i class="bi bi-list menu-mobile"></i>
   <aside id="header">
     <section class="profile">
       <img src="../static/img/profile.png" alt="profile">
@@ -47,5 +48,25 @@
       </ul>
     </nav>
   </aside>
+  <main id="main">
+    <section id="inicio" class="row m-0 p-0">
+      <div class="col-md-10 d-flex justify-content-center align-items-center flex-column">
+          <h2 class="text-white text-shadow">Daniel Giansante</h2>
+          <span id="subtitle" class="text-white text-shadow">Desenvolvedor, analista de T.I e DPO.</span>
+      </div>
+
+      <div class="col-md-12 d-flex justify-content-end align-items-end">
+          <div id="arraste" class="d-flex align-items-center">
+              <i class="bi bi-arrow-down text-white pe-2 fs-2" aria-hidden="true"></i>
+              <a href="#sobre">Arrate para mais</a>
+          </div>
+
+      </div>
+
+  </section>
+
+  </main>
 </body>
+<script src="../static/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="../static/script.js"></script>
 </html>
