--- a/templates/index.html
+++ b/templates/index.html
@@ -50,11 +50,30 @@
   </aside>
   <main id="main">
     <section id="inicio" class="row m-0 p-0">
-      <div class="col-md-10 d-flex justify-content-center align-items-center flex-column">
+      <div class="video-background">
+        <video autoplay muted loop>
+            <source src="../static/img/backgroud.mp4" type="video/mp4">
+        </video>
+    </div>
+      <div class="col-md-8 d-flex justify-content-center align-items-center flex-column">
           <h2 class="text-white text-shadow">Daniel Giansante</h2>
           <span id="subtitle" class="text-white text-shadow">Desenvolvedor, analista de T.I e DPO.</span>
+        <div class="lista-imagens">
+          <img class="imagem-habilidades" src="../static/img/python-svgrepo-com.svg" alt="Imagem SVG 1">
+          <img class="imagem-habilidades" src="../static/img/flask-svgrepo-com.svg" alt="Imagem SVG 2">
+          <img class="imagem-habilidades" src="../static/img/pandas-svgrepo-com.svg" alt="Imagem SVG 3">
+          <img class="imagem-habilidades" src="../static/img/javascript-svgrepo-com.svg" alt="Imagem SVG 4">
+          <img class="imagem-habilidades" src="../static/img/html-5-svgrepo-com.svg" alt="Imagem SVG 5">
+          <img class="imagem-habilidades" src="../static/img/css-3-svgrepo-com.svg" alt="Imagem SVG 6">
+        </div>
+          
       </div>
 
+      
+     
+        
+        
+    
       <div class="col-md-12 d-flex justify-content-end align-items-end">
           <div id="arraste" class="d-flex align-items-center">
               <i class="bi bi-arrow-down text-white pe-2 fs-2" aria-hidden="true"></i>
