--- a/templates/index.html
+++ b/templates/index.html
@@ -58,7 +58,7 @@
       <div class="col-md-8 d-flex justify-content-center align-items-center flex-column">
           <h2 class="text-white text-shadow">Daniel Giansante</h2>
           <span id="subtitle" class="text-white text-shadow">Desenvolvedor, analista de T.I e DPO.</span>
-        <div class="lista-imagens">
+        <div id="box" >
           <img class="imagem-habilidades" src="../static/img/python-svgrepo-com.svg" alt="Imagem SVG 1">
           <img class="imagem-habilidades" src="../static/img/flask-svgrepo-com.svg" alt="Imagem SVG 2">
           <img class="imagem-habilidades" src="../static/img/pandas-svgrepo-com.svg" alt="Imagem SVG 3">
