--- a/static/styles.css
+++ b/static/styles.css
@@ -120,6 +120,16 @@ html,body {
     font-size: 1.5rem;
     
   }
+
+  section#inicio div#box {
+    background-color: rgba(255, 255, 255, 0.118);
+    margin-right: 10rem;
+    margin-top: 1rem;
+    padding: 15px;
+    border-radius: 8px;
+  
+    
+  }
   
   .text-shadow {
     text-shadow: 4px 4px 10px #000000;
@@ -162,8 +172,7 @@ html,body {
 .lista-imagens {
     background-color: rgba(255, 255, 255, 0.118); /* Fundo quase transparente */
     padding: 20px;
-    width: 400px;
-    margin: 10px auto;
+  
     border-radius: 8px;
     text-align: left;
     margin-left: 200px;
