--- a/static/styles.css
+++ b/static/styles.css
@@ -101,7 +101,7 @@ html,body {
   }
   
   section#inicio {
-    background-image: url("./img/backgroud.mp4");
+    background-image: url("./img/bannerPortifolio.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
@@ -169,16 +169,9 @@ html,body {
       left: 0;
   }
   
-.lista-imagens {
-    background-color: rgba(255, 255, 255, 0.118); /* Fundo quase transparente */
-    padding: 20px;
+
   
-    border-radius: 8px;
-    text-align: left;
-    margin-left: 200px;
-    margin-bottom: 0;
-  
-}
+
 .imagem-habilidades {
     width: 50px;
     height: 50px;
@@ -187,8 +180,9 @@ html,body {
 }
 .imagem-habilidades:hover {
     transform: translate3d(-5px, -10px, 0px);
-    transition: 0.3s; /* Animação de 0.3 segundos */
-}
+    transition: 0.3s;}/* Animação de 0.3 segundos */
+
+ 
 .imagem-habilidades:last-child {
     margin-right: 0; /* Remove o espaço após a última imagem */
 }
@@ -212,7 +206,7 @@ html,body {
     }
   }
   
-  .video-background {
+  section#inicio div#video-background {
     position: fixed;
     top: 0;
     left: 0;
@@ -222,7 +216,7 @@ html,body {
     overflow: hidden;
   }
   
-  .video-background video {
+  section#inicio div#video-background video {
     position: absolute;
     top: 50%;
     left: 50%;
