subindo fotos criadas com ia

--- a/templates/sobre.html
+++ b/templates/sobre.html
@@ -10,7 +10,7 @@
     </div>
     <div class="row mt-4">
         <div class="col-md-4">
-            <img class="img-fluid shadow" src="../static/img/profile.png" alt="profile">
+            <img class="img-fluid shadow" src="../static/img/sobre.jpg" alt="profile">
         </div>
         <div class="col-md-8">
             <h3>Analista de T.I</h3>
