--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
   <i class="bi bi-list menu-mobile"></i>
   <aside id="header">
     <section class="profile">
-      <img src="../static/img/profile.png" alt="profile">
+      <img src="../static/img/profile.jpg" alt="profile">
       <h1>Daniel Giansante</h1>
       <p>Full Stack Developer</p>
       <div class="social-links mt-4 text-center">
